# uman

./: Cargo.toml  README.md
src/: backend.rs  cli.rs  config.rs  db.rs  deps.rs  error.rs  fzf.rs  lib.rs  main.rs  paths.rs  render.rs  search.rs
tests/: cli.rs  integration.rs
