[package]
name = "uman"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
dirs = "6"
regex = "1"
once_cell = "1"
tempfile = "3"