[package]
name = "uniman"
version = "1.0.3"
authors = ["basarsubasi"]
edition = "2021"
description = "Universal Man Pages. Read man pages of any operating system on any unix machine, natively."
readme = "README.md"
homepage = "https://github.com/basarsubasi/uniman"
repository = "https://github.com/basarsubasi/uniman"
license-file = "LICENSE"
keywords = ["man", "man-pages", "cli", "documentation", "unix"]
categories = ["command-line-utilities"]
exclude = ["target"]


[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
dirs = "6"
regex = "1"
once_cell = "1"
tempfile = "3"
which = "7.0.0"